--- a/portfolio/frontend/index.html
+++ b/portfolio/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Kabir Ahmad - Research Lab Worker (ML)" />
-    <title>Kabir Ahmad | Portfolio</title>
+    <meta name="description" content="Hamza Kahloon - Research Lab Worker (ML)" />
+    <title>Hamza Kahloon | Portfolio</title>
     <!-- Preconnect to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
